--- a/core/shared/styles/includes/variables.less
+++ b/core/shared/styles/includes/variables.less
@@ -343,10 +343,11 @@
 
 // Tabs
 @tab-outline-color: rgba(0, 0, 0, 0.20);
-@tab-background-gradient-start-color: rgb(240, 240, 240);
-@tab-background-gradient-end-color: rgb(230, 230, 230);
-@tab-active-font-color: rgb(105, 105, 105);
-@tab-hover-font-color: rgb(30, 30, 30);
+@tab-background-gradient-start-color: rgb(246, 246, 246);
+@tab-background-gradient-end-color: rgb(238, 238, 238);
+@tab-inactive-font-color: rgb(135, 135, 135);
+@tab-active-font-color: rgb(75, 75, 75);
+@tab-hover-font-color: rgb(75, 75, 75);
 @tab-disabled-font-color: rgb(180, 180, 180);
 @tab-white-background-gradient-start-color: rgb(255, 255, 255);
 @tab-white-background-gradient-end-color: rgb(245, 245, 245);
